# Project-Meltybrain

./: CMakeLists.txt  Pegasus Wheels v3.f3d  SimpleMeltCopy  SimpleMeltCopy.cpp  readme.md
Arduino Libraries/Adafruit_SleepyDog_Library/: Adafruit_SleepyDog.cpp
Arduino Libraries/Adafruit_SleepyDog_Library/examples/Sleep/: Sleep.ino
Arduino Libraries/Adafruit_SleepyDog_Library/utility/: WatchdogSAMD.cpp
Arduino Libraries/SparkFun_LIS331_Arduino_Library-master/Examples/LIS331_I2C_Example/: LIS331_I2C_Example.ino
Arduino Libraries/SparkFun_LIS331_Arduino_Library-master/Examples/LIS331_SPI_Example/: LIS331_SPI_Example.ino
CAD/: Meltybrain CAD v0.3 v24.f3z  WEAPON LOCK.step
Other Meltybrain Examples/dangerdonut/: sdkconfig.defaults
Other Meltybrain Examples/dangerdonut/components/orientator/: orientator.h
Other Meltybrain Examples/melontype/: LED.h  accel.cpp  accel.h  config.h  dynamic_calibration.h  font.h  melontype.ino  original_header.h
Other Meltybrain Examples/melontype-main/: LED.cpp  LED.h  accel.cpp  accel.h  config.h  dynamic_calibration.ino  melontype.ino
Other Meltybrain Examples/openmelt/: accel_handler.cpp  accel_handler.h  openmelt.ino
Video Processing/: main.py  overflow.py  rps_data.csv  rps_data_updated.csv
main/: IR_DETECT.ino  platformio.ini
main/include/: Accelerometer.h  AccelerometerI2C.h  Config.h  IR.h  Magnetometer.h  Motor.h  Receiver.h  Robot.h  SensorFusion.h
main/lib/Eigen/: AccelerateSupport  Cholesky  CholmodSupport  Core  Eigenvalues  Geometry  Householder  IterativeLinearSolvers  Jacobi  KLUSupport  LU  MetisSupport  OrderingMethods  PaStiXSupport  PardisoSupport  QR  QtAlignedMalloc  SPQRSupport  SVD  Sparse  SparseCholesky  SparseCore  SparseLU  SparseQR  StdDeque  StdList  StdVector  SuperLUSupport  ThreadPool  UmfPackSupport
main/lib/Eigen/src/Cholesky/: LDLT.h  LLT.h
main/lib/Eigen/src/CholmodSupport/: CholmodSupport.h
main/lib/Eigen/src/Core/: ArithmeticSequence.h  Array.h  ArrayBase.h  ArrayWrapper.h  Assign.h  AssignEvaluator.h  BandMatrix.h  Block.h  CommaInitializer.h  ConditionEstimator.h  CoreEvaluators.h  CoreIterators.h  CwiseBinaryOp.h  CwiseNullaryOp.h  CwiseTernaryOp.h  CwiseUnaryOp.h  CwiseUnaryView.h  DenseBase.h  DenseCoeffsBase.h  DenseStorage.h  DeviceWrapper.h  Diagonal.h  DiagonalMatrix.h  DiagonalProduct.h  Dot.h  EigenBase.h  Fill.h  FindCoeff.h  ForceAlignedAccess.h  Fuzzy.h  GeneralProduct.h  GenericPacketMath.h  GlobalFunctions.h  IO.h  IndexedView.h  InnerProduct.h  Inverse.h  Map.h  MapBase.h  MathFunctions.h  (+37 more)
main/lib/Eigen/src/Core/functors/: AssignmentFunctors.h  BinaryFunctors.h  NullaryFunctors.h  StlFunctors.h  TernaryFunctors.h  (+1 more)
main/lib/Eigen/src/Eigenvalues/: ComplexEigenSolver.h  ComplexSchur.h  EigenSolver.h  GeneralizedEigenSolver.h  GeneralizedSelfAdjointEigenSolver.h  HessenbergDecomposition.h  MatrixBaseEigenvalues.h  RealQZ.h  RealSchur.h  SelfAdjointEigenSolver.h  Tridiagonalization.h
main/lib/Eigen/src/Geometry/: AlignedBox.h  AngleAxis.h  EulerAngles.h  Homogeneous.h  Hyperplane.h  OrthoMethods.h  ParametrizedLine.h  Quaternion.h  Rotation2D.h  RotationBase.h  Scaling.h  Transform.h  Translation.h  Umeyama.h
main/lib/Eigen/src/Householder/: BlockHouseholder.h  Householder.h  HouseholderSequence.h
main/lib/Eigen/src/IterativeLinearSolvers/: BasicPreconditioners.h  BiCGSTAB.h  ConjugateGradient.h  IncompleteCholesky.h  IncompleteLUT.h  IterativeSolverBase.h  LeastSquareConjugateGradient.h  SolveWithGuess.h
main/lib/Eigen/src/Jacobi/: Jacobi.h
main/lib/Eigen/src/KLUSupport/: KLUSupport.h
main/lib/Eigen/src/LU/: Determinant.h  FullPivLU.h  InverseImpl.h  PartialPivLU.h
main/lib/Eigen/src/MetisSupport/: MetisSupport.h
main/lib/Eigen/src/OrderingMethods/: Amd.h  Eigen_Colamd.h  Ordering.h
main/lib/Eigen/src/PaStiXSupport/: PaStiXSupport.h
main/lib/Eigen/src/QR/: ColPivHouseholderQR.h  CompleteOrthogonalDecomposition.h  FullPivHouseholderQR.h  HouseholderQR.h
main/lib/Eigen/src/SPQRSupport/: SuiteSparseQRSupport.h
main/lib/Eigen/src/SVD/: BDCSVD.h  JacobiSVD.h  SVDBase.h  UpperBidiagonalization.h
main/lib/Eigen/src/SparseCholesky/: SimplicialCholesky.h  SimplicialCholesky_impl.h
main/lib/Eigen/src/SparseCore/: AmbiVector.h  CompressedStorage.h  ConservativeSparseSparseProduct.h  SparseAssign.h  SparseBlock.h  SparseColEtree.h  SparseCompressedBase.h  SparseCwiseBinaryOp.h  SparseCwiseUnaryOp.h  SparseDenseProduct.h  SparseDiagonalProduct.h  SparseDot.h  SparseFuzzy.h  SparseMap.h  SparseMatrix.h  SparseMatrixBase.h  SparsePermutation.h  SparseProduct.h  SparseRedux.h  SparseRef.h  SparseSelfAdjointView.h  SparseSolverBase.h  SparseSparseProductWithPruning.h  SparseTranspose.h  SparseTriangularView.h  SparseUtil.h  SparseVector.h  SparseView.h  TriangularSolver.h
main/lib/Eigen/src/SparseLU/: SparseLU.h  SparseLUImpl.h  SparseLU_Memory.h  SparseLU_Structs.h  SparseLU_SupernodalMatrix.h  SparseLU_Utils.h  SparseLU_column_bmod.h  SparseLU_column_dfs.h  SparseLU_copy_to_ucol.h  SparseLU_heap_relax_snode.h  SparseLU_kernel_bmod.h  SparseLU_panel_bmod.h  SparseLU_panel_dfs.h  SparseLU_pivotL.h  SparseLU_pruneL.h  SparseLU_relax_snode.h
main/lib/Eigen/src/SparseQR/: SparseQR.h
main/lib/Eigen/src/StlSupport/: StdDeque.h  StdList.h  StdVector.h  details.h
main/lib/Eigen/src/SuperLUSupport/: SuperLUSupport.h
main/lib/Eigen/src/ThreadPool/: Barrier.h  CoreThreadPoolDevice.h  EventCount.h  ForkJoin.h  NonBlockingThreadPool.h  RunQueue.h  ThreadCancel.h  ThreadEnvironment.h  ThreadLocal.h  ThreadPoolInterface.h  ThreadYield.h
main/lib/Eigen/src/UmfPackSupport/: UmfPackSupport.h
main/lib/Eigen/src/misc/: Image.h  Kernel.h  RealSvd2x2.h  lapacke_helpers.h
main/lib/Eigen/src/plugins/: BlockMethods.inc  CommonCwiseUnaryOps.inc  IndexedViewMethods.inc
main/lib/L1S331/: LIS331.cpp  LIS331.h
main/lib/PulsePosition/: PulsePositionIMXRT.h
main/src/: Accelerometer.cpp  AccelerometerI2C.cpp  IR.cpp  IRTest.cpp  Magnetometer.cpp  Motor.cpp  Receiver.cpp  Robot.cpp  SensorFusion.cpp  main.cpp  main.ino
openmelt/: accel_handler.h  battery_monitor.cpp
(+95 files in other folders)
