cmake_minimum_required(VERSION 3.31)
project(Meltybrain)

set(CMAKE_CXX_STANDARD 14)

include_directories(main/include)
include_directories(main/lib/Eigen)
include_directories(main/lib/Eigen/src)
include_directories(main/lib/Eigen/src/AccelerateSupport)
include_directories(main/lib/Eigen/src/Cholesky)
include_directories(main/lib/Eigen/src/CholmodSupport)
include_directories(main/lib/Eigen/src/Core)
include_directories(main/lib/Eigen/src/Core/arch)
include_directories(main/lib/Eigen/src/Core/arch/AltiVec)
include_directories(main/lib/Eigen/src/Core/arch/AVX)
include_directories(main/lib/Eigen/src/Core/arch/AVX512)
include_directories(main/lib/Eigen/src/Core/arch/Default)
include_directories(main/lib/Eigen/src/Core/arch/GPU)
include_directories(main/lib/Eigen/src/Core/arch/HIP)
include_directories(main/lib/Eigen/src/Core/arch/HIP/hcc)
include_directories(main/lib/Eigen/src/Core/arch/HVX)
include_directories(main/lib/Eigen/src/Core/arch/LSX)
include_directories(main/lib/Eigen/src/Core/arch/MSA)
include_directories(main/lib/Eigen/src/Core/arch/NEON)
include_directories(main/lib/Eigen/src/Core/arch/SSE)
include_directories(main/lib/Eigen/src/Core/arch/SVE)
include_directories(main/lib/Eigen/src/Core/arch/SYCL)
include_directories(main/lib/Eigen/src/Core/arch/ZVector)
include_directories(main/lib/Eigen/src/Core/functors)
include_directories(main/lib/Eigen/src/Core/products)
include_directories(main/lib/Eigen/src/Core/util)
include_directories(main/lib/Eigen/src/Eigenvalues)
include_directories(main/lib/Eigen/src/Geometry)
include_directories(main/lib/Eigen/src/Geometry/arch)
include_directories(main/lib/Eigen/src/Householder)
include_directories(main/lib/Eigen/src/IterativeLinearSolvers)
include_directories(main/lib/Eigen/src/Jacobi)
include_directories(main/lib/Eigen/src/KLUSupport)
include_directories(main/lib/Eigen/src/LU)
include_directories(main/lib/Eigen/src/LU/arch)
include_directories(main/lib/Eigen/src/MetisSupport)
include_directories(main/lib/Eigen/src/misc)
include_directories(main/lib/Eigen/src/OrderingMethods)
include_directories(main/lib/Eigen/src/PardisoSupport)
include_directories(main/lib/Eigen/src/PaStiXSupport)
include_directories(main/lib/Eigen/src/QR)
include_directories(main/lib/Eigen/src/SparseCholesky)
include_directories(main/lib/Eigen/src/SparseCore)
include_directories(main/lib/Eigen/src/SparseLU)
include_directories(main/lib/Eigen/src/SparseQR)
include_directories(main/lib/Eigen/src/SPQRSupport)
include_directories(main/lib/Eigen/src/StlSupport)
include_directories(main/lib/Eigen/src/SuperLUSupport)
include_directories(main/lib/Eigen/src/SVD)
include_directories(main/lib/Eigen/src/ThreadPool)
include_directories(main/lib/Eigen/src/UmfPackSupport)
include_directories(main/lib/L1S331)

add_executable(Meltybrain
        main/include/Accelerometer.h
        main/lib/Eigen/src/AccelerateSupport/AccelerateSupport.h
        main/lib/Eigen/src/AccelerateSupport/InternalHeaderCheck.h
        main/lib/Eigen/src/Cholesky/InternalHeaderCheck.h
        main/lib/Eigen/src/Cholesky/LDLT.h
        main/lib/Eigen/src/Cholesky/LLT.h
        main/lib/Eigen/src/Cholesky/LLT_LAPACKE.h
        main/lib/Eigen/src/CholmodSupport/CholmodSupport.h
        main/lib/Eigen/src/CholmodSupport/InternalHeaderCheck.h
        main/lib/Eigen/src/Core/arch/AltiVec/Complex.h
        main/lib/Eigen/src/Core/arch/AltiVec/MathFunctions.h
        main/lib/Eigen/src/Core/arch/AltiVec/MatrixProduct.h
        main/lib/Eigen/src/Core/arch/AltiVec/MatrixProductCommon.h
        main/lib/Eigen/src/Core/arch/AltiVec/MatrixProductMMA.h
        main/lib/Eigen/src/Core/arch/AltiVec/MatrixProductMMAbfloat16.h
        main/lib/Eigen/src/Core/arch/AltiVec/PacketMath.h
        main/lib/Eigen/src/Core/arch/AltiVec/TypeCasting.h
        main/lib/Eigen/src/Core/arch/AVX/Complex.h
        main/lib/Eigen/src/Core/arch/AVX/MathFunctions.h
        main/lib/Eigen/src/Core/arch/AVX/PacketMath.h
        main/lib/Eigen/src/Core/arch/AVX/Reductions.h
        main/lib/Eigen/src/Core/arch/AVX/TypeCasting.h
        main/lib/Eigen/src/Core/arch/AVX512/Complex.h
        main/lib/Eigen/src/Core/arch/AVX512/GemmKernel.h
        main/lib/Eigen/src/Core/arch/AVX512/MathFunctions.h
        main/lib/Eigen/src/Core/arch/AVX512/MathFunctionsFP16.h
        main/lib/Eigen/src/Core/arch/AVX512/PacketMath.h
        main/lib/Eigen/src/Core/arch/AVX512/PacketMathFP16.h
        main/lib/Eigen/src/Core/arch/AVX512/Reductions.h
        main/lib/Eigen/src/Core/arch/AVX512/TrsmKernel.h
        main/lib/Eigen/src/Core/arch/AVX512/TypeCasting.h
        main/lib/Eigen/src/Core/arch/AVX512/TypeCastingFP16.h
        main/lib/Eigen/src/Core/arch/Default/BFloat16.h
        main/lib/Eigen/src/Core/arch/Default/ConjHelper.h
        main/lib/Eigen/src/Core/arch/Default/GenericPacketMathFunctions.h
        main/lib/Eigen/src/Core/arch/Default/GenericPacketMathFunctionsFwd.h
        main/lib/Eigen/src/Core/arch/Default/Half.h
        main/lib/Eigen/src/Core/arch/Default/Settings.h
        main/lib/Eigen/src/Core/arch/GPU/Complex.h
        main/lib/Eigen/src/Core/arch/GPU/MathFunctions.h
        main/lib/Eigen/src/Core/arch/GPU/PacketMath.h
        main/lib/Eigen/src/Core/arch/GPU/Tuple.h
        main/lib/Eigen/src/Core/arch/GPU/TypeCasting.h
        main/lib/Eigen/src/Core/arch/HIP/hcc/math_constants.h
        main/lib/Eigen/src/Core/arch/HVX/PacketMath.h
        main/lib/Eigen/src/Core/arch/LSX/Complex.h
        main/lib/Eigen/src/Core/arch/LSX/GeneralBlockPanelKernel.h
        main/lib/Eigen/src/Core/arch/LSX/MathFunctions.h
        main/lib/Eigen/src/Core/arch/LSX/PacketMath.h
        main/lib/Eigen/src/Core/arch/LSX/TypeCasting.h
        main/lib/Eigen/src/Core/arch/MSA/Complex.h
        main/lib/Eigen/src/Core/arch/MSA/MathFunctions.h
        main/lib/Eigen/src/Core/arch/MSA/PacketMath.h
        main/lib/Eigen/src/Core/arch/NEON/Complex.h
        main/lib/Eigen/src/Core/arch/NEON/GeneralBlockPanelKernel.h
        main/lib/Eigen/src/Core/arch/NEON/MathFunctions.h
        main/lib/Eigen/src/Core/arch/NEON/PacketMath.h
        main/lib/Eigen/src/Core/arch/NEON/TypeCasting.h
        main/lib/Eigen/src/Core/arch/NEON/UnaryFunctors.h
        main/lib/Eigen/src/Core/arch/SSE/Complex.h
        main/lib/Eigen/src/Core/arch/SSE/MathFunctions.h
        main/lib/Eigen/src/Core/arch/SSE/PacketMath.h
        main/lib/Eigen/src/Core/arch/SSE/Reductions.h
        main/lib/Eigen/src/Core/arch/SSE/TypeCasting.h
        main/lib/Eigen/src/Core/arch/SVE/MathFunctions.h
        main/lib/Eigen/src/Core/arch/SVE/PacketMath.h
        main/lib/Eigen/src/Core/arch/SVE/TypeCasting.h
        main/lib/Eigen/src/Core/arch/SYCL/InteropHeaders.h
        main/lib/Eigen/src/Core/arch/SYCL/MathFunctions.h
        main/lib/Eigen/src/Core/arch/SYCL/PacketMath.h
        main/lib/Eigen/src/Core/arch/SYCL/TypeCasting.h
        main/lib/Eigen/src/Core/arch/ZVector/Complex.h
        main/lib/Eigen/src/Core/arch/ZVector/MathFunctions.h
        main/lib/Eigen/src/Core/arch/ZVector/PacketMath.h
        main/lib/Eigen/src/Core/functors/AssignmentFunctors.h
        main/lib/Eigen/src/Core/functors/BinaryFunctors.h
        main/lib/Eigen/src/Core/functors/NullaryFunctors.h
        main/lib/Eigen/src/Core/functors/StlFunctors.h
        main/lib/Eigen/src/Core/functors/TernaryFunctors.h
        main/lib/Eigen/src/Core/functors/UnaryFunctors.h
        main/lib/Eigen/src/Core/products/GeneralBlockPanelKernel.h
        main/lib/Eigen/src/Core/products/GeneralMatrixMatrix.h
        main/lib/Eigen/src/Core/products/GeneralMatrixMatrix_BLAS.h
        main/lib/Eigen/src/Core/products/GeneralMatrixMatrixTriangular.h
        main/lib/Eigen/src/Core/products/GeneralMatrixMatrixTriangular_BLAS.h
        main/lib/Eigen/src/Core/products/GeneralMatrixVector.h
        main/lib/Eigen/src/Core/products/GeneralMatrixVector_BLAS.h
        main/lib/Eigen/src/Core/products/Parallelizer.h
        main/lib/Eigen/src/Core/products/SelfadjointMatrixMatrix.h
        main/lib/Eigen/src/Core/products/SelfadjointMatrixMatrix_BLAS.h
        main/lib/Eigen/src/Core/products/SelfadjointMatrixVector.h
        main/lib/Eigen/src/Core/products/SelfadjointMatrixVector_BLAS.h
        main/lib/Eigen/src/Core/products/SelfadjointProduct.h
        main/lib/Eigen/src/Core/products/SelfadjointRank2Update.h
        main/lib/Eigen/src/Core/products/TriangularMatrixMatrix.h
        main/lib/Eigen/src/Core/products/TriangularMatrixMatrix_BLAS.h
        main/lib/Eigen/src/Core/products/TriangularMatrixVector.h
        main/lib/Eigen/src/Core/products/TriangularMatrixVector_BLAS.h
        main/lib/Eigen/src/Core/products/TriangularSolverMatrix.h
        main/lib/Eigen/src/Core/products/TriangularSolverMatrix_BLAS.h
        main/lib/Eigen/src/Core/products/TriangularSolverVector.h
        main/lib/Eigen/src/Core/util/Assert.h
        main/lib/Eigen/src/Core/util/BlasUtil.h
        main/lib/Eigen/src/Core/util/ConfigureVectorization.h
        main/lib/Eigen/src/Core/util/Constants.h
        main/lib/Eigen/src/Core/util/DisableStupidWarnings.h
        main/lib/Eigen/src/Core/util/EmulateArray.h
        main/lib/Eigen/src/Core/util/ForwardDeclarations.h
        main/lib/Eigen/src/Core/util/IndexedViewHelper.h
        main/lib/Eigen/src/Core/util/IntegralConstant.h
        main/lib/Eigen/src/Core/util/Macros.h
        main/lib/Eigen/src/Core/util/MaxSizeVector.h
        main/lib/Eigen/src/Core/util/Memory.h
        main/lib/Eigen/src/Core/util/Meta.h
        main/lib/Eigen/src/Core/util/MKL_support.h
        main/lib/Eigen/src/Core/util/MoreMeta.h
        main/lib/Eigen/src/Core/util/ReenableStupidWarnings.h
        main/lib/Eigen/src/Core/util/ReshapedHelper.h
        main/lib/Eigen/src/Core/util/Serializer.h
        main/lib/Eigen/src/Core/util/StaticAssert.h
        main/lib/Eigen/src/Core/util/SymbolicIndex.h
        main/lib/Eigen/src/Core/util/XprHelper.h
        main/lib/Eigen/src/Core/ArithmeticSequence.h
        main/lib/Eigen/src/Core/Array.h
        main/lib/Eigen/src/Core/ArrayBase.h
        main/lib/Eigen/src/Core/ArrayWrapper.h
        main/lib/Eigen/src/Core/Assign.h
        main/lib/Eigen/src/Core/Assign_MKL.h
        main/lib/Eigen/src/Core/AssignEvaluator.h
        main/lib/Eigen/src/Core/BandMatrix.h
        main/lib/Eigen/src/Core/Block.h
        main/lib/Eigen/src/Core/CommaInitializer.h
        main/lib/Eigen/src/Core/ConditionEstimator.h
        main/lib/Eigen/src/Core/CoreEvaluators.h
        main/lib/Eigen/src/Core/CoreIterators.h
        main/lib/Eigen/src/Core/CwiseBinaryOp.h
        main/lib/Eigen/src/Core/CwiseNullaryOp.h
        main/lib/Eigen/src/Core/CwiseTernaryOp.h
        main/lib/Eigen/src/Core/CwiseUnaryOp.h
        main/lib/Eigen/src/Core/CwiseUnaryView.h
        main/lib/Eigen/src/Core/DenseBase.h
        main/lib/Eigen/src/Core/DenseCoeffsBase.h
        main/lib/Eigen/src/Core/DenseStorage.h
        main/lib/Eigen/src/Core/DeviceWrapper.h
        main/lib/Eigen/src/Core/Diagonal.h
        main/lib/Eigen/src/Core/DiagonalMatrix.h
        main/lib/Eigen/src/Core/DiagonalProduct.h
        main/lib/Eigen/src/Core/Dot.h
        main/lib/Eigen/src/Core/EigenBase.h
        main/lib/Eigen/src/Core/Fill.h
        main/lib/Eigen/src/Core/FindCoeff.h
        main/lib/Eigen/src/Core/ForceAlignedAccess.h
        main/lib/Eigen/src/Core/Fuzzy.h
        main/lib/Eigen/src/Core/GeneralProduct.h
        main/lib/Eigen/src/Core/GenericPacketMath.h
        main/lib/Eigen/src/Core/GlobalFunctions.h
        main/lib/Eigen/src/Core/IndexedView.h
        main/lib/Eigen/src/Core/InnerProduct.h
        main/lib/Eigen/src/Core/InternalHeaderCheck.h
        main/lib/Eigen/src/Core/Inverse.h
        main/lib/Eigen/src/Core/IO.h
        main/lib/Eigen/src/Core/Map.h
        main/lib/Eigen/src/Core/MapBase.h
        main/lib/Eigen/src/Core/MathFunctions.h
        main/lib/Eigen/src/Core/MathFunctionsImpl.h
        main/lib/Eigen/src/Core/Matrix.h
        main/lib/Eigen/src/Core/MatrixBase.h
        main/lib/Eigen/src/Core/NestByValue.h
        main/lib/Eigen/src/Core/NoAlias.h
        main/lib/Eigen/src/Core/NumTraits.h
        main/lib/Eigen/src/Core/PartialReduxEvaluator.h
        main/lib/Eigen/src/Core/PermutationMatrix.h
        main/lib/Eigen/src/Core/PlainObjectBase.h
        main/lib/Eigen/src/Core/Product.h
        main/lib/Eigen/src/Core/ProductEvaluators.h
        main/lib/Eigen/src/Core/Random.h
        main/lib/Eigen/src/Core/RandomImpl.h
        main/lib/Eigen/src/Core/RealView.h
        main/lib/Eigen/src/Core/Redux.h
        main/lib/Eigen/src/Core/Ref.h
        main/lib/Eigen/src/Core/Replicate.h
        main/lib/Eigen/src/Core/Reshaped.h
        main/lib/Eigen/src/Core/ReturnByValue.h
        main/lib/Eigen/src/Core/Reverse.h
        main/lib/Eigen/src/Core/Select.h
        main/lib/Eigen/src/Core/SelfAdjointView.h
        main/lib/Eigen/src/Core/SelfCwiseBinaryOp.h
        main/lib/Eigen/src/Core/SkewSymmetricMatrix3.h
        main/lib/Eigen/src/Core/Solve.h
        main/lib/Eigen/src/Core/SolverBase.h
        main/lib/Eigen/src/Core/SolveTriangular.h
        main/lib/Eigen/src/Core/StableNorm.h
        main/lib/Eigen/src/Core/StlIterators.h
        main/lib/Eigen/src/Core/Stride.h
        main/lib/Eigen/src/Core/Swap.h
        main/lib/Eigen/src/Core/Transpose.h
        main/lib/Eigen/src/Core/Transpositions.h
        main/lib/Eigen/src/Core/TriangularMatrix.h
        main/lib/Eigen/src/Core/VectorBlock.h
        main/lib/Eigen/src/Core/VectorwiseOp.h
        main/lib/Eigen/src/Core/Visitor.h
        main/lib/Eigen/src/Eigenvalues/ComplexEigenSolver.h
        main/lib/Eigen/src/Eigenvalues/ComplexSchur.h
        main/lib/Eigen/src/Eigenvalues/ComplexSchur_LAPACKE.h
        main/lib/Eigen/src/Eigenvalues/EigenSolver.h
        main/lib/Eigen/src/Eigenvalues/GeneralizedEigenSolver.h
        main/lib/Eigen/src/Eigenvalues/GeneralizedSelfAdjointEigenSolver.h
        main/lib/Eigen/src/Eigenvalues/HessenbergDecomposition.h
        main/lib/Eigen/src/Eigenvalues/InternalHeaderCheck.h
        main/lib/Eigen/src/Eigenvalues/MatrixBaseEigenvalues.h
        main/lib/Eigen/src/Eigenvalues/RealQZ.h
        main/lib/Eigen/src/Eigenvalues/RealSchur.h
        main/lib/Eigen/src/Eigenvalues/RealSchur_LAPACKE.h
        main/lib/Eigen/src/Eigenvalues/SelfAdjointEigenSolver.h
        main/lib/Eigen/src/Eigenvalues/SelfAdjointEigenSolver_LAPACKE.h
        main/lib/Eigen/src/Eigenvalues/Tridiagonalization.h
        main/lib/Eigen/src/Geometry/arch/Geometry_SIMD.h
        main/lib/Eigen/src/Geometry/AlignedBox.h
        main/lib/Eigen/src/Geometry/AngleAxis.h
        main/lib/Eigen/src/Geometry/EulerAngles.h
        main/lib/Eigen/src/Geometry/Homogeneous.h
        main/lib/Eigen/src/Geometry/Hyperplane.h
        main/lib/Eigen/src/Geometry/InternalHeaderCheck.h
        main/lib/Eigen/src/Geometry/OrthoMethods.h
        main/lib/Eigen/src/Geometry/ParametrizedLine.h
        main/lib/Eigen/src/Geometry/Quaternion.h
        main/lib/Eigen/src/Geometry/Rotation2D.h
        main/lib/Eigen/src/Geometry/RotationBase.h
        main/lib/Eigen/src/Geometry/Scaling.h
        main/lib/Eigen/src/Geometry/Transform.h
        main/lib/Eigen/src/Geometry/Translation.h
        main/lib/Eigen/src/Geometry/Umeyama.h
        main/lib/Eigen/src/Householder/BlockHouseholder.h
        main/lib/Eigen/src/Householder/Householder.h
        main/lib/Eigen/src/Householder/HouseholderSequence.h
        main/lib/Eigen/src/Householder/InternalHeaderCheck.h
        main/lib/Eigen/src/IterativeLinearSolvers/BasicPreconditioners.h
        main/lib/Eigen/src/IterativeLinearSolvers/BiCGSTAB.h
        main/lib/Eigen/src/IterativeLinearSolvers/ConjugateGradient.h
        main/lib/Eigen/src/IterativeLinearSolvers/IncompleteCholesky.h
        main/lib/Eigen/src/IterativeLinearSolvers/IncompleteLUT.h
        main/lib/Eigen/src/IterativeLinearSolvers/InternalHeaderCheck.h
        main/lib/Eigen/src/IterativeLinearSolvers/IterativeSolverBase.h
        main/lib/Eigen/src/IterativeLinearSolvers/LeastSquareConjugateGradient.h
        main/lib/Eigen/src/IterativeLinearSolvers/SolveWithGuess.h
        main/lib/Eigen/src/Jacobi/InternalHeaderCheck.h
        main/lib/Eigen/src/Jacobi/Jacobi.h
        main/lib/Eigen/src/KLUSupport/InternalHeaderCheck.h
        main/lib/Eigen/src/KLUSupport/KLUSupport.h
        main/lib/Eigen/src/LU/arch/InverseSize4.h
        main/lib/Eigen/src/LU/Determinant.h
        main/lib/Eigen/src/LU/FullPivLU.h
        main/lib/Eigen/src/LU/InternalHeaderCheck.h
        main/lib/Eigen/src/LU/InverseImpl.h
        main/lib/Eigen/src/LU/PartialPivLU.h
        main/lib/Eigen/src/LU/PartialPivLU_LAPACKE.h
        main/lib/Eigen/src/MetisSupport/InternalHeaderCheck.h
        main/lib/Eigen/src/MetisSupport/MetisSupport.h
        main/lib/Eigen/src/misc/blas.h
        main/lib/Eigen/src/misc/Image.h
        main/lib/Eigen/src/misc/InternalHeaderCheck.h
        main/lib/Eigen/src/misc/Kernel.h
        main/lib/Eigen/src/misc/lapacke.h
        main/lib/Eigen/src/misc/lapacke_helpers.h
        main/lib/Eigen/src/misc/lapacke_mangling.h
        main/lib/Eigen/src/misc/RealSvd2x2.h
        main/lib/Eigen/src/OrderingMethods/Amd.h
        main/lib/Eigen/src/OrderingMethods/Eigen_Colamd.h
        main/lib/Eigen/src/OrderingMethods/InternalHeaderCheck.h
        main/lib/Eigen/src/OrderingMethods/Ordering.h
        main/lib/Eigen/src/PardisoSupport/InternalHeaderCheck.h
        main/lib/Eigen/src/PardisoSupport/PardisoSupport.h
        main/lib/Eigen/src/PaStiXSupport/InternalHeaderCheck.h
        main/lib/Eigen/src/PaStiXSupport/PaStiXSupport.h
        main/lib/Eigen/src/QR/ColPivHouseholderQR.h
        main/lib/Eigen/src/QR/ColPivHouseholderQR_LAPACKE.h
        main/lib/Eigen/src/QR/CompleteOrthogonalDecomposition.h
        main/lib/Eigen/src/QR/FullPivHouseholderQR.h
        main/lib/Eigen/src/QR/HouseholderQR.h
        main/lib/Eigen/src/QR/HouseholderQR_LAPACKE.h
        main/lib/Eigen/src/QR/InternalHeaderCheck.h
        main/lib/Eigen/src/SparseCholesky/InternalHeaderCheck.h
        main/lib/Eigen/src/SparseCholesky/SimplicialCholesky.h
        main/lib/Eigen/src/SparseCholesky/SimplicialCholesky_impl.h
        main/lib/Eigen/src/SparseCore/AmbiVector.h
        main/lib/Eigen/src/SparseCore/CompressedStorage.h
        main/lib/Eigen/src/SparseCore/ConservativeSparseSparseProduct.h
        main/lib/Eigen/src/SparseCore/InternalHeaderCheck.h
        main/lib/Eigen/src/SparseCore/SparseAssign.h
        main/lib/Eigen/src/SparseCore/SparseBlock.h
        main/lib/Eigen/src/SparseCore/SparseColEtree.h
        main/lib/Eigen/src/SparseCore/SparseCompressedBase.h
        main/lib/Eigen/src/SparseCore/SparseCwiseBinaryOp.h
        main/lib/Eigen/src/SparseCore/SparseCwiseUnaryOp.h
        main/lib/Eigen/src/SparseCore/SparseDenseProduct.h
        main/lib/Eigen/src/SparseCore/SparseDiagonalProduct.h
        main/lib/Eigen/src/SparseCore/SparseDot.h
        main/lib/Eigen/src/SparseCore/SparseFuzzy.h
        main/lib/Eigen/src/SparseCore/SparseMap.h
        main/lib/Eigen/src/SparseCore/SparseMatrix.h
        main/lib/Eigen/src/SparseCore/SparseMatrixBase.h
        main/lib/Eigen/src/SparseCore/SparsePermutation.h
        main/lib/Eigen/src/SparseCore/SparseProduct.h
        main/lib/Eigen/src/SparseCore/SparseRedux.h
        main/lib/Eigen/src/SparseCore/SparseRef.h
        main/lib/Eigen/src/SparseCore/SparseSelfAdjointView.h
        main/lib/Eigen/src/SparseCore/SparseSolverBase.h
        main/lib/Eigen/src/SparseCore/SparseSparseProductWithPruning.h
        main/lib/Eigen/src/SparseCore/SparseTranspose.h
        main/lib/Eigen/src/SparseCore/SparseTriangularView.h
        main/lib/Eigen/src/SparseCore/SparseUtil.h
        main/lib/Eigen/src/SparseCore/SparseVector.h
        main/lib/Eigen/src/SparseCore/SparseView.h
        main/lib/Eigen/src/SparseCore/TriangularSolver.h
        main/lib/Eigen/src/SparseLU/InternalHeaderCheck.h
        main/lib/Eigen/src/SparseLU/SparseLU.h
        main/lib/Eigen/src/SparseLU/SparseLU_column_bmod.h
        main/lib/Eigen/src/SparseLU/SparseLU_column_dfs.h
        main/lib/Eigen/src/SparseLU/SparseLU_copy_to_ucol.h
        main/lib/Eigen/src/SparseLU/SparseLU_heap_relax_snode.h
        main/lib/Eigen/src/SparseLU/SparseLU_kernel_bmod.h
        main/lib/Eigen/src/SparseLU/SparseLU_Memory.h
        main/lib/Eigen/src/SparseLU/SparseLU_panel_bmod.h
        main/lib/Eigen/src/SparseLU/SparseLU_panel_dfs.h
        main/lib/Eigen/src/SparseLU/SparseLU_pivotL.h
        main/lib/Eigen/src/SparseLU/SparseLU_pruneL.h
        main/lib/Eigen/src/SparseLU/SparseLU_relax_snode.h
        main/lib/Eigen/src/SparseLU/SparseLU_Structs.h
        main/lib/Eigen/src/SparseLU/SparseLU_SupernodalMatrix.h
        main/lib/Eigen/src/SparseLU/SparseLU_Utils.h
        main/lib/Eigen/src/SparseLU/SparseLUImpl.h
        main/lib/Eigen/src/SparseQR/InternalHeaderCheck.h
        main/lib/Eigen/src/SparseQR/SparseQR.h
        main/lib/Eigen/src/SPQRSupport/InternalHeaderCheck.h
        main/lib/Eigen/src/SPQRSupport/SuiteSparseQRSupport.h
        main/lib/Eigen/src/StlSupport/details.h
        main/lib/Eigen/src/StlSupport/StdDeque.h
        main/lib/Eigen/src/StlSupport/StdList.h
        main/lib/Eigen/src/StlSupport/StdVector.h
        main/lib/Eigen/src/SuperLUSupport/InternalHeaderCheck.h
        main/lib/Eigen/src/SuperLUSupport/SuperLUSupport.h
        main/lib/Eigen/src/SVD/BDCSVD.h
        main/lib/Eigen/src/SVD/BDCSVD_LAPACKE.h
        main/lib/Eigen/src/SVD/InternalHeaderCheck.h
        main/lib/Eigen/src/SVD/JacobiSVD.h
        main/lib/Eigen/src/SVD/JacobiSVD_LAPACKE.h
        main/lib/Eigen/src/SVD/SVDBase.h
        main/lib/Eigen/src/SVD/UpperBidiagonalization.h
        main/lib/Eigen/src/ThreadPool/Barrier.h
        main/lib/Eigen/src/ThreadPool/CoreThreadPoolDevice.h
        main/lib/Eigen/src/ThreadPool/EventCount.h
        main/lib/Eigen/src/ThreadPool/ForkJoin.h
        main/lib/Eigen/src/ThreadPool/InternalHeaderCheck.h
        main/lib/Eigen/src/ThreadPool/NonBlockingThreadPool.h
        main/lib/Eigen/src/ThreadPool/RunQueue.h
        main/lib/Eigen/src/ThreadPool/ThreadCancel.h
        main/lib/Eigen/src/ThreadPool/ThreadEnvironment.h
        main/lib/Eigen/src/ThreadPool/ThreadLocal.h
        main/lib/Eigen/src/ThreadPool/ThreadPoolInterface.h
        main/lib/Eigen/src/ThreadPool/ThreadYield.h
        main/lib/Eigen/src/UmfPackSupport/InternalHeaderCheck.h
        main/lib/Eigen/src/UmfPackSupport/UmfPackSupport.h
        main/lib/L1S331/LIS331.cpp
        main/lib/L1S331/LIS331.h
        main/src/Accelerometer.cpp
        main/src/main.ino)
